# twitch-highlights

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build_gui.ps1  check.bat  config.example.json  config.py  gui.bat  install.bat  install.ps1  nightly.example.ps1  pipeline.py  pyproject.toml  requirements-dev.txt  requirements-gui.txt  requirements-test.txt  requirements.txt  run.bat  run.ps1
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: tests.yml
docs/: TODO-download-progress.md
gui/: api.py  app.py  make_icon.py  paths.py  runner.py  version.py
gui/web/: app.js  index.html  styles.css
modules/: audio_extractor.py  avif_exporter.py  chat_signal.py  clip_extractor.py  highlight_selector.py  naming.py  progress.py  source_resolver.py  subtitle_burner.py  timing.py  transcriber.py
prompts/: mode_all.txt  mode_dance.txt  mode_hype.txt  mode_reaction.txt  system_base.txt
scripts/: avif_export.ps1
tests/: conftest.py  test_audio_extractor.py  test_avif_exporter.py  test_chat_signal.py  test_clip_extractor.py  test_config.py  test_highlight_selector.py  test_naming.py  test_pipeline.py  test_progress.py  test_source_resolver.py  test_subtitle_burner.py  test_timing.py  test_transcriber.py
