[project]
name = "twitch-highlights"
version = "1.0.0"
description = "Local, GPU-accelerated highlight extractor for Twitch / Kick VODs and m3u8 streams."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "NexRushVr" }]
keywords = ["twitch", "kick", "vod", "highlights", "whisper", "ollama", "ffmpeg"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "openai-whisper>=20250625",
    "yt-dlp>=2026.3.17",
    "librosa>=0.11.0,<0.12",
    "numpy>=2.2.6,<3.0",
    "playwright>=1.59.0,<2.0",
    "curl_cffi>=0.15.0,<0.16",
    "ollama>=0.6.2,<1.0",
    "openai>=2.36.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]

[project.urls]
Homepage = "https://github.com/NexRushVr/twitch-highlights"
Issues = "https://github.com/NexRushVr/twitch-highlights/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
